<resources>
    <string name="app_name">BookSharing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_book_title">Скотный Двор</string>
    <string name="temp_book_autor">Джордж Оруэлл</string>
    <string name="get_a_sharing">ВЗЯТЬ КНИГУ В ШЕРИНГ</string>
    <string name="book_description">Описание</string>
    <string name="temp_book_description">В книгу включена не только легендарная повесть-притча Оруэлла "Скотный двор", но и эссе разных лет – "Литература и тоталитаризм", "Писатели и Левиафан", "Заметки о национализме" и другие.
Что привлекает читателя в художественной и публицистической прозе этого запретного в тоталитарных странах автора?
В первую очередь – острейшие проблемы политической и культурной жизни 40-х годов XX века, которые и сегодня продолжают оставаться актуальными. А также объективность в оценке событий и яркая авторская индивидуальность, помноженные на истинное литературное мастерство.</string>
    <string name="book_owner">Владелец:</string>
    <string name="quantity_sharing_title">Была в шеринге:</string>
    <string name="username">username</string>
    <string name="sharing_count">156</string>
    <string name="raz">раз</string>
    <string name="user_rating">Рейтинг</string>
    <string name="temp_rating">5.0</string>
    <string name="user_library_title">Библиотека</string>
    <string name="temp_library">130</string>
    <string name="user_get_title">Брал</string>
    <string name="temp_get">12</string>
    <string name="user_sharing">Расшарил</string>
    <string name="temp_sharing">23</string>
    <string name="user_name">Pavel Lukyanov</string>
    <string name="temp_user_info">Люблю прозу и антиутопии. Большая коллекция книг. Книги возвращаю во время.</string>
    <string name="add_book_title">Добавить книгу</string>
    <string name="book_title_tv">Название</string>
    <string name="add_book_author_title">Автор</string>
    <string name="add_book_title_hint">Введите название книги</string>
    <string name="add_book_author_hint">Введите автора книги</string>
    <string name="add_book_description_title">Краткое описание</string>
    <string name="add_book_poster_title">Обложка</string>
    <string name="add_book_description_hint">Введите краткое описание книги</string>
    <string name="add_book_button">Добавить книгу</string>
    <string name="add_book_poster">Введите адрес изображения обложки</string>
    <string name="now_reading">Сейчас читаю</string>
</resources>